font family + size changed + hover  button changed

--- a/books.html
+++ b/books.html
@@ -60,10 +60,7 @@
         <section class="books__kasijesperContainer">
             <div class="books__kasijesperTextContainer">
                 <h3 class="books__kasijesperTitle">Kasi-Jespers Kamp</h3>
-                <p class="books__kasijesperText">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, nam!
-                    Lorem
-                    ipsum dolor sit amet consectetur adipisicing elit. Adipisci, nisi in! Ad recusandae suscipit numquam
-                    maiores perspiciatis corporis rerum officiis?</p>
+                <p class="books__kasijesperText">Jesper "Kasi" Nielsen tog turen fra anonym tankpasser på Vestegnen til kulørt rigmand med pragtvillaer på Mallorca, privatjet, bodyguard og historisk store investeringer i sportsklubber. Men da pressen og skattemyndighederne begyndte at granske hans virksomheder, sluttede eventyret brat.</p>
                 <div class="books__kasiButtonsContainer">
                     <a href="https://www.saxo.com/dk/kasi-jespers-kamp_ole-hall_haeftet_9788702268591"><button class="books__buttons">Køb bogen</button></a>
                     <a href="./kasi-jesper.html"><button class="books__buttons">Læs mere</button></a>
@@ -75,9 +72,7 @@
         <section class="books__pandoraContainer">
             <div class="books__pandoraTextContainer">
                 <h3 class="books__pandoraTitle">Pandora - Danmarks største væksteventyr</h3>
-                <p class="books__pandoraText">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, nam! Lorem
-                    ipsum dolor sit amet consectetur adipisicing elit. Adipisci, nisi in! Ad recusandae suscipit numquam
-                    maiores perspiciatis corporis rerum officiis?</p>
+                <p class="books__pandoraText">“Vi vil basalt set bygge en virksomhed op på 10 år, som det tog LEGO 100 år at bygge. Det er relativt ambitiøst”.Sådan sagde Pandoras topchef, Mikkel Vendelin Olesen, på et internt seminar for selskabets øverste ledelse i 2009. Året inden havde kapitalfonden Axcel købt 60 procent af Pandora, og nu var man ved at forberede den børsintroduktion, der skulle komme til at forgylde ejerne – og kort efter koste investorer milliarder af kroner.</p>
                 <div class="books__pandoraButtonsContainer">
                     <a href="https://www.saxo.com/dk/pandora_ole-hall_epub_9788771590845"><button class="books__buttons">Køb bogen</button></a>
                     <a href="./pandora.html"><button class="books__buttons">Læs mere</button></a>
@@ -89,9 +84,7 @@
         <section class="books__ryanairContainer">
             <div class="books__ryanairTextContainer">
                 <h3 class="books__ryanairTitle">Ryanair - Flyselskabet mange hader - men alligevel flyver med </h3>
-                <p class="books__ryanairText">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, nam! Lorem
-                    ipsum dolor sit amet consectetur adipisicing elit. Adipisci, nisi in! Ad recusandae suscipit numquam
-                    maiores perspiciatis corporis rerum officiis?</p>
+                <p class="books__ryanairText">Michael O’Leary gjorde Ryanair til luftens svar på Aldi, og flyselskabet blev under hans ledelse Europas mest succesfulde. Ryanair har i dag flest kunder, er det mest værdifulde flyselskab i Europa og er bedst til at tjene penge. I foråret 2015 blev det københavnernes tur til at flyve med det kontroversielle, irske lavprisselskab. Men fagforeninger, politikere og konkurrenter reagerede med modstand, da Ryanair åbnede sin første rute fra Københavns Lufthavn.</p>
                 <div class="books__ryanairButtonsContainer">
                     <a href="https://www.saxo.com/dk/ryanair_ole-hal_epub_9788799742172"><button class="books__buttons">Køb bogen</button></a>
                     <a href="./ryanair.html"><button class="books__buttons">Læs mere</button></a>
