--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus animi beatae ducimus rem error
                     facilis exercitationem ipsa modi consequuntur similique ratione, nemo praesentium nam! Nihil cum
                     asperiores quas commodi at.</p>
-                <a href="#"><button class="news__button">
+                <a href="./elon-musk.html"><button class="news__button">
                         <p>Læs mere her</p>
                     </button></a>
             </article>
@@ -55,40 +55,41 @@
         </div>
         <div class="frontpage__cardsContainer">
             <div class="frontpage__cards">
-                <img class="frontpage__cardsImg" src="./assets/images/nycrop-kasi.jpeg"
-                    alt="forsiden til bogen Kasi-Jespers kamp">
+                <a href="./kasi-jesper.html"><img class="frontpage__cardsImg" src="./assets/images/nycrop-kasi.jpeg"
+                    alt="forsiden til bogen Kasi-Jespers kamp"></a>
                 <h3 class="frontpage__cardsTitle">Kasi-Jespers kamp</h3>
                 <p class="frontpage__cardsType">bog</p>
                 <p class="frontpage__cardsText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, culpa?
                     Deserunt optio eius expedita sequi voluptatibus esse officia nulla eos accusantium ullam, voluptates
                     libero fugit!</p>
-                <a href="#"><button class="cards__button">
+                <a href="./kasi-jesper.html"><button class="cards__button">
                         <p class="cards__buttonText">Læs mere her</p>
                     </button></a>
             </div>
             <div class="frontpage__cards">
-                <img class="frontpage__cardsImg" src="./assets/images/bitcoin-bedraget-full.jpeg"
-                    alt="billedegrafik af bitcoin bedraget">
+                <a href="./bitcoin.html"><img class="frontpage__cardsImg" src="./assets/images/bitcoin-bedraget-full.jpeg"
+                    alt="billedegrafik af bitcoin bedraget"></a>
                 <h3 class="frontpage__cardsTitle">Bitcoin-bedraget</h3>
                 <p class="frontpage__cardsType">podcast</p>
                 <p class="frontpage__cardsText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, culpa?
                     Deserunt optio eius expedita sequi voluptatibus esse officia nulla eos accusantium ullam, voluptates
                     libero fugit!</p>
-                <a href="#"><button class="cards__button">
+                <a href="./bitcoin.html"><button class="cards__button">
                         <p class="cards__buttonText">Læs mere her</p>
                     </button></a>
 
             </div>
             <div class="frontpage__cards">
-                <img class="frontpage__cardsImg" src="./assets/images/pandora-cover.png"
-                    alt="forsiden til bogen Pandora">
-                <h3 class="frontpage__cardsTitle">Pandora <span class="frontpage__cardsH3--pandora">- Danmarks største
-                        væksteventyr</span></h3>
+                <a href="./pandora.html"><img class="frontpage__cardsImg" src="./assets/images/pandora-cover.png"
+                    alt="forsiden til bogen Pandora"></a>
+                <h3 class="frontpage__cardsTitle">Pandora </h3>
+                <!-- <span class="frontpage__cardsH3--pandora">- Danmarks største
+                        væksteventyr</span>  SER MÆRKELIGT UD MED LANG TITEL-->
                 <p class="frontpage__cardsType">bog</p>
                 <p class="frontpage__cardsText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, culpa?
                     Deserunt optio eius expedita sequi voluptatibus esse officia nulla eos accusantium ullam, voluptates
                     libero fugit!</p>
-                <a href="#"><button class="cards__button">
+                <a href="./pandora.html"><button class="cards__button">
                         <p class="cards__buttonText">Læs mere her</p>
                     </button></a>
             </div>
@@ -107,7 +108,7 @@
                     modtaget flere nomineringer og priser - bl.a. har han modtaget EU-Komissionens Europæiske
                     journalistpris
                 </p>
-                <a href="#"><button class="hero__button">
+                <a href="./about.html"><button class="hero__button">
                         <p class="hero__buttonText">Læs mere her</p>
                     </button></a>
             </div>
@@ -127,7 +128,7 @@
                     vikaransættelser, som af en arbejdsmarkedsforsker er blevet kaldt “slavelignende vilkår”. Dette er
                     historien om globalisering i praksis.
                 </p>
-                <a href="#"><button class="hero__buttonLast">
+                <a href="./ryanair.html"><button class="hero__buttonLast">
                         <p class="hero__buttonText">Læs mere her</p>
                     </button></a>
             </div>
@@ -140,17 +141,18 @@
         <div class="footer__container">
             <menu class="footer__menu">
                 <h3 class="footer__linksTitle">Links</h3>
-                <li class="footer__links"><a href="#">Om Ole Hall</a></li>
-                <li class="footer__links"><a href="#">Kontakt</a></li>
-                <li class="footer__links"><a href="#">Kasi-Jespers Kamp</a></li>
-                <li class="footer__links"><a href="#">Bitcoin-bedraget</a></li>
-                <li class="footer__links"><a href="#">Pandora - Danmarks vildeste væksteventyr</a></li>
-                <li class="footer__links"><a href="#">Ryanair - Flyselskabet mange hader - men alligevel flyver med</a>
+                <li class="footer__links"><a href="./about.html">Om Ole Hall</a></li>
+                <li class="footer__links"><a href="./contact.html">Kontakt</a></li>
+                <li class="footer__links"><a href="./elon-musk.html">Elon Musk</a></li>
+                <li class="footer__links"><a href="./kasi-jesper.html">Kasi-Jespers Kamp</a></li>
+                <li class="footer__links"><a href="./bitcoin.html">Bitcoin-bedraget</a></li>
+                <li class="footer__links"><a href="./pandora.html">Pandora - Danmarks vildeste væksteventyr</a></li>
+                <li class="footer__links"><a href="./ryanair.html">Ryanair - Flyselskabet mange hader - men alligevel flyver med</a>
                 </li>
             </menu>
             <div class="footer__socials">
-                <a href="#"><i class="fa-brands fa-linkedin" style="color: #000000;"></i></a>
-                <a href="#"><i class="fa-brands fa-square-twitter" style="color: #000000;"></i></a>
+                <a href="https://dk.linkedin.com/in/olehall"><i class="fa-brands fa-linkedin" style="color: #000000;"></i></a>
+                <a href="https://twitter.com/olehall?s=20"><i class="fa-brands fa-square-twitter" style="color: #000000;"></i></a>
             </div>
 
             <div class="footer__contactContainer">
