--- a/bitcoin.html
+++ b/bitcoin.html
@@ -74,7 +74,7 @@
                                 alt="podimo logo"></a>
                     </div>
             </div>
-            </div>z
+            </div>
             <img class="bitcoin__articleImg" src="./assets/images/bitcoin-bedraget-orginal.jpeg"
                 alt="Bitcoin-bedraget logo">
                
