image links fixed + btn fixed + style continuity

--- a/about.html
+++ b/about.html
@@ -14,30 +14,73 @@
     <header class="siteHeader">
         <div class="siteHeader__containerImg">
             <a href="./index.html" class="siteheader__frontpageLink">
-            <img class="siteHeader__img" src="./assets/images/ole+headshot.jpg"
-                alt="Et billede af Ole Hall i sort og hvid">
-            <h1 class="siteHeader__title">Ole Hall</h1></a>
+                <img class="siteHeader__img" src="./assets/images/ole+headshot.jpg"
+                    alt="Et billede af Ole Hall i sort og hvid">
+                <h1 class="siteHeader__title">Ole Hall</h1>
+            </a>
             <h2 class="siteHeader__subtext">Forfatter & erhvervsjournalist</h2>
         </div>
         <nav class="primaryNav">
             <menu class="primaryNav__menu">
                 <div class="primaryNav__div">
-                    <li class="primaryNav__menuItem"><a href="./kasi-jesper.html" class="primaryNav__link">Kasi-Jespers kamp</a></li>
-                    <li class="primaryNav__menuItem"><a href="./bitcoin.html" class="primaryNav__link">Bitcoin-bedraget</a></li>
-                    <li class="primaryNav__menuItem"><a href="./elon-musk.html" class="primaryNav__link">Elon Musk</a></li>
+                    <li class="primaryNav__menuItem"><a href="./kasi-jesper.html" class="primaryNav__link">Kasi-Jespers
+                            kamp</a></li>
+                    <li class="primaryNav__menuItem"><a href="./bitcoin.html"
+                            class="primaryNav__link">Bitcoin-bedraget</a></li>
+                    <li class="primaryNav__menuItem"><a href="./elon-musk.html" class="primaryNav__link">Elon Musk</a>
+                    </li>
                 </div>
                 <div class="primaryNav__div">
-                    <li class="primaryNav__menuItem"><a href="./books.html" class="primaryNav__link-right">Bøger</a></li>
-                    <li class="primaryNav__menuItem"><a href="./about.html" class="primaryNav__link-right about__headerLink">Om</a></li>
-                    <li class="primaryNav__menuItem"><a href="./contact.html" class="primaryNav__link-right">Kontakt</a></li>
+                    <li class="primaryNav__menuItem"><a href="./books.html" class="primaryNav__link-right">Bøger</a>
+                    </li>
+                    <li class="primaryNav__menuItem"><a href="./about.html"
+                            class="primaryNav__link-right about__headerLink">Om</a></li>
+                    <li class="primaryNav__menuItem"><a href="./contact.html" class="primaryNav__link-right">Kontakt</a>
+                    </li>
                 </div>
             </menu>
         </nav>
     </header>
-<main>
+    <main>
 
+        <article class="about__article">
+            <div class="about__articleTextContainer">
+                <h2 class="about__title">Om Ole Hall</h2>
+                <p class="about__bodyText">
+                    Ole Hall er en prisvindende dansk journalist, som er ansat i DR Nyheder, hvor han dækker økonomi og
+                    erhvervsliv for P1 Morgen og P1 Orientering. Ole Hall bidrager også til TV Avisen, Radioavisen,
+                    Genstart, Tiden og dr.dk. Før han i 2015 kom til DR, har han været skrivende journalist på bl.a.
+                    Berlingske, Jyllands-Posten og Altinget.dk.</p>
+                <p class="about__bodyText">Ole Hall er vært på podcasten Bitcoin-bedraget, hvor han undersøger et
+                    internationalt netværk, der er mistænkt for bedrageri i milliardklassen. Som journalist har Ole Hall
+                    også afsløret ulovlige udledninger af kemikalier i Nordsøen foretaget af Mærsk Oil. Han har
+                    dokumenteret
+                    kønsdiskrimination mod tusindvis af gravide begået af de største virksomheder i forsikrings- og
+                    pensionsbranchen - hvilket har ført til bødestraf til 14 selskaber. Han har derudover afdækket ,
+                    hvordan
+                    Danmarks største modekoncern Bestseller ulovligt har anvendt giftige kemikalier i børnetøj og
+                    undladt at
+                    informere kunderne.</p>
+                <p class="about__bodyText"> Ole Hall har desuden udgivet erhvervsbøger på Gyldendals forlag og Peoples
+                    Press
+                    - bl.a. den kritiske erhvervsbiografi "Kasi-Jespers kamp" og "Pandora - Danmarks vildste
+                    væksteventyr".
+                </p>
+                <p class="about__bodyText"> For sit journalistiske arbejde har Ole Hall modtaget flere nomineringer og
+                    priser - bl.a. har han modtaget EU-Komissionens Europæiske journalistpris og Advokatrådets
+                    journalistpris, og han er blevet nomineret til årets bedste kritiske interview (Prix Audio) og årets
+                    bedst formidlede undersøgende historie for podcast-dokumentaren Bitcoin-bedraget (FUJ).</p>
+                    <div class="about__buttonContainer">
+                <a href="http://presse.gyldendal.dk/Forfattere.aspx?search=ole%20hall"><button
+                        class="about__button">Pressefotos</button></a>
+                <a href="./contact.html"><button class="about__button">Kontakt Ole</button></a>
+            </div>
+            </div>
+            <img class="about__img" src="./assets/images/ole-full-cover-quality.jpeg" alt="Et billede af Ole Hall">
 
-</main>
+        </article>
+
+    </main>
 
     <footer>
         <img class="footer__svg" src="./assets/images/footer-wave.svg" alt="bølgende farve der går ned i footeren">
