--- a/index.html
+++ b/index.html
@@ -59,24 +59,24 @@
                     alt="forsiden til bogen Kasi-Jespers kamp"></a>
                 <h3 class="frontpage__cardsTitle">Kasi-Jespers kamp</h3>
                 <p class="frontpage__cardsType">bog</p>
-                <p class="frontpage__cardsText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, culpa?
-                    Deserunt optio eius expedita sequi voluptatibus esse officia nulla eos accusantium ullam, voluptates
-                    libero fugit!</p>
+                <p class="frontpage__cardsText">Jesper "Kasi" Nielsen tog turen fra anonym tankpasser på Vestegnen til kulørt rigmand med pragtvillaer på Mallorca, privatjet og bodyguard. Men da pressen og skattemyndighederne begyndte at granske hans virksomheder, sluttede eventyret brat. </p>
+                <div class="frontpage__cardsButtonContainer">
                 <a href="./kasi-jesper.html"><button class="cards__button">
                         <p class="cards__buttonText">Læs mere her</p>
                     </button></a>
+                </div>
             </div>
             <div class="frontpage__cards">
-                <a href="./bitcoin.html"><img class="frontpage__cardsImg" src="./assets/images/bitcoin-bedraget-full.jpeg"
+                <a href="./bitcoin.html"><img class="frontpage__cardsImg" src="./assets/images/bitcoin-full.jpeg"
                     alt="billedegrafik af bitcoin bedraget"></a>
                 <h3 class="frontpage__cardsTitle">Bitcoin-bedraget</h3>
                 <p class="frontpage__cardsType">podcast</p>
-                <p class="frontpage__cardsText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, culpa?
-                    Deserunt optio eius expedita sequi voluptatibus esse officia nulla eos accusantium ullam, voluptates
-                    libero fugit!</p>
+                <p class="frontpage__cardsText">På bordet foran Nete ligger en lille optager tændt. Den opfanger lyden af Nete, der er ved at investere 75.000 kroner i bitcoins med hjælp fra investeringsrådgiveren, Phillip Graham. Hvad Nete ikke ved er, at Phillip Graham og firmaet Qteck er mistænkt for svindel.</p>
+                <div class="frontpage__cardsButtonContainer">
                 <a href="./bitcoin.html"><button class="cards__button">
                         <p class="cards__buttonText">Læs mere her</p>
                     </button></a>
+                </div>
 
             </div>
             <div class="frontpage__cards">
@@ -86,19 +86,19 @@
                 <!-- <span class="frontpage__cardsH3--pandora">- Danmarks største
                         væksteventyr</span>  SER MÆRKELIGT UD MED LANG TITEL-->
                 <p class="frontpage__cardsType">bog</p>
-                <p class="frontpage__cardsText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, culpa?
-                    Deserunt optio eius expedita sequi voluptatibus esse officia nulla eos accusantium ullam, voluptates
-                    libero fugit!</p>
+                <p class="frontpage__cardsText">“Vi vil basalt set bygge en virksomhed op på 10 år, som det tog LEGO 100 år at bygge. Det er relativt ambitiøst”. Sådan sagde Pandoras topchef, Mikkel Vendelin Olesen, på et internt seminar for selskabets øverste ledelse i 2009. Selskabet er i dag 50 mia. kroner værd.</p>
+                <div class="frontpage__cardsButtonContainer">
                 <a href="./pandora.html"><button class="cards__button">
                         <p class="cards__buttonText">Læs mere her</p>
                     </button></a>
+                </div>
             </div>
         </div>
 
 
         <section class="frontpage__heroContainer">
-            <img class="hero__img" src="./assets/images/ole-hall-full.jpeg"
-                alt="Et billede af Ole Hall stående i DR byen">
+            <a href="./about.html"><img class="hero__img" src="./assets/images/ole-hall-full.jpeg"
+                alt="Et billede af Ole Hall stående i DR byen"></a>
             <div class="hero__textContainer">
                 <h3 class="frontpage__heroTitle">Om Ole Hall</h3>
                 <p class="hero__text">Ole Hall er en prisvindende dansk journalist, som er ansat i DR Nyheder, hvor han
@@ -132,7 +132,7 @@
                         <p class="hero__buttonText">Læs mere her</p>
                     </button></a>
             </div>
-            <img class="hero__img" src="./assets/images/ryanair-cover.png" alt="cover af bogen omkring Ryanair">
+           <a href="./ryanair.html"> <img class="hero__img" src="./assets/images/ryanair-cover.png" alt="cover af bogen omkring Ryanair"></a>
         </section>
     </main>
 
