--- a/ryanair.html
+++ b/ryanair.html
@@ -43,7 +43,7 @@
     <main>
         <article class="ryanair__article">
             <div class="ryanair__articleTextContainer">
-                <h2 class="ryanair__title">RYANAIR </h2>
+                <h2 class="ryanair__title">Ryanair</h2>
                 <h3 class="ryanair__underTitle">- Flyselskabet mange hader - men stadig flyver med</h3>
                 <h4 class="ryanair__subheading">Om bogen</h4>
                 <p class="ryanair__bodyText">Michael O’Leary gjorde Ryanair til luftens svar på Aldi, og flyselskabet blev under hans ledelse Europas mest succesfulde. Ryanair har i dag flest kunder, er det mest værdifulde flyselskab i Europa og er bedst til at tjene penge. I foråret 2015 blev det københavnernes tur til at flyve med det kontroversielle, irske lavprisselskab. Men fagforeninger, politikere og konkurrenter reagerede med modstand, da Ryanair åbnede sin første rute fra Københavns Lufthavn. Ryanair vil på ingen måde tegne dansk overenskomst, men vil fortsætte brugen af kontrakt- og vikaransættelser, som af en arbejdsmarkedsforsker er blevet kaldt “slavelignende vilkår”. Dette er historien om globalisering i praksis. Om den danske model, der bliver udfordret, - og om en topchef, der med kontroversielle udtalelser og tiltag i dag er hadet af både kunder, konkurrenter og politikere. Få historien om Ryanair-ansattes arbejdsforhold, selskabets banebrydende forretningsmodel og forstå, hvorfor flyindustrien har gennemgået en revolution de seneste 20 år.</p>
