finish slider + start contact page

--- a/index.html
+++ b/index.html
@@ -57,13 +57,16 @@
                     <div class="carousel__track-container">
                         <ul class="carousel__track">
                             <li class="carousel__slide current-slide" >
-                                <img class="carousel__image" src="./assets/images/ole-hall-slider1.jpeg" alt="">
+                                <img class="carousel__image" src="./assets/images/ole-slider1.jpeg" alt="">
                             </li>
                             <li class="carousel__slide">
-                                <img class="carousel__image" src="./assets/images/ole-hall-slider2.jpeg" alt="">
+                                <img class="carousel__image" src="./assets/images/ole-slider3.jpeg" alt="">
                             </li>
                             <li class="carousel__slide">
-                                <img class="carousel__image" src="./assets/images/ole-hall-slider3.jpeg" alt="">
+                                <img class="carousel__image" src="./assets/images/ole-slider2.jpeg" alt="">
+                            </li>
+                            <li class="carousel__slide">
+                                <img class="carousel__image" src="./assets/images/ole-slider4.jpeg" alt="">
                             </li>
                         </ul>
                     </div>
@@ -74,6 +77,7 @@
             
                     <div class="carousel__nav">
                         <button class="carousel__indicator current-slide"></button>
+                        <button class="carousel__indicator"></button>
                         <button class="carousel__indicator"></button>
                         <button class="carousel__indicator"></button>
                     </div>
