--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,37 @@
         </nav>
     </header>
 <main>
-her skal der være en kontaktside
+    <form class="contact__form" action="./tak.html" novalidate >
+        <div class="form__field">
+            <label class="input__label">Navn:
+                <input id="inputName" class="form__input" type="text" name="navn" placeholder="F.eks Brian" required>
+            </label>
+            <span class="form__message"></span>
+        </div>
+        <div class="form__field">
+            <label class="input__label">Email:
+                <input id="inputEmail" class="form__input" type="email" name="email"
+                placeholder="F.eks osteelskeren@ost.dk" required>
+            </label>
+            <span class="form__message"></span>
+        </div>
+        <div class="form__field">
+            <label class="input__label">Tlf: 
+                <input id="inputNumber" class="form__input" type="tel" name="tlf" placeholder="F.eks 10203040" required>
+            </label>
+            <span class="form__message"></span>
+        
+        </div>
+        <div class="form__field">
+            <label  class="input__label">Besked:
+                <textarea class="form__input" placeholder="F.eks. Jeg vil gerne bestille 2 kg ost" required></textarea>
+            </label>
+            <span class="form__message"></span>
+        </div>
+        <div class="form__submit">
+            <button class="form__submitButton" type="submit">Send</button>
+        </div>
+    </form>
 
 </main>
 
