remove contact form from footer + make js work

--- a/bitcoin.html
+++ b/bitcoin.html
@@ -102,46 +102,10 @@
                 <a href="#"><i class="fa-brands fa-square-twitter" style="color: #000000;"></i></a>
             </div>
 
-            <div class="footer__contactContainer">
-                <h3 class="footer__contactTitle">Kontakt formular</h3>
-                <form class="footer__form" action="./tak.html" novalidate>
-                    <div class="form__field">
-                        <label class="input__label">Navn:
-                            <input id="inputName" class="form__input" type="text" name="navn" placeholder="F.eks Brian"
-                                required>
-                        </label>
-                        <span class="form__message"></span>
-                    </div>
-                    <div class="form__field">
-                        <label class="input__label">Email:
-                            <input id="inputEmail" class="form__input" type="email" name="email"
-                                placeholder="F.eks osteelskeren@ost.dk" required>
-                        </label>
-                        <span class="form__message"></span>
-                    </div>
-                    <div class="form__field">
-                        <label class="input__label">Tlf:
-                            <input id="inputNumber" class="form__input" type="tel" name="tlf"
-                                placeholder="F.eks 10203040" required>
-                        </label>
-                        <span class="form__message"></span>
-
-                    </div>
-                    <div class="form__field">
-                        <label class="input__label">Besked:
-                            <textarea class="form__input" placeholder="F.eks. Jeg vil gerne bestille 2 kg ost"
-                                required></textarea>
-                        </label>
-                        <span class="form__message"></span>
-                    </div>
-                    <div class="form__submit">
-                        <button class="form__submitButton" type="submit">Send</button>
-                    </div>
-                </form>
-            </div>
-        </div>
+            <div class="copyright__container">
         <p class="footer__copyright">© Copyright Ole Hall - Forfatter og Erhvervsjournalist 2023.
             Website af Silje Paldrup</p>
+            </div>
     </footer>
 </body>
 
