--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,14 @@
         </nav>
     </header>
 <main>
-    <form class="contact__form" action="./tak.html" novalidate >
+    <article class="contact__article">
+        <h2 class="contact__articleTitle">Kontakt Ole Hall</h2>
+        <p class="contact__articleBodyText">Ønsker om interview, foredrag mv. kan rettes direkte til Ole Hall på 28544737 ved at bruge kontaktformularen her på siden,  skrive til kontakt@olehall.dk eller til oleh@dr.dk.
+        </p>
+    </article>
+    
+
+    <form class="contact__form" action="./thankyou.html" novalidate >
         <div class="form__field">
             <label class="input__label">Navn:
                 <input id="inputName" class="form__input" type="text" name="navn" placeholder="F.eks Brian" required>
@@ -43,14 +50,14 @@
             <span class="form__message"></span>
         </div>
         <div class="form__field">
-            <label class="input__label">Email:
+            <label class="input__label">E-mail:
                 <input id="inputEmail" class="form__input" type="email" name="email"
-                placeholder="F.eks osteelskeren@ost.dk" required>
+                placeholder="F.eks megetvigtigt@journalist.dk" required>
             </label>
             <span class="form__message"></span>
         </div>
         <div class="form__field">
-            <label class="input__label">Tlf: 
+            <label class="input__label">Telefon: 
                 <input id="inputNumber" class="form__input" type="tel" name="tlf" placeholder="F.eks 10203040" required>
             </label>
             <span class="form__message"></span>
@@ -58,7 +65,7 @@
         </div>
         <div class="form__field">
             <label  class="input__label">Besked:
-                <textarea class="form__input" placeholder="F.eks. Jeg vil gerne bestille 2 kg ost" required></textarea>
+                <textarea class="form__input" placeholder="F.eks. Jeg vil gerne inviterer Ole på besøg hos dronningen" required></textarea>
             </label>
             <span class="form__message"></span>
         </div>
@@ -87,47 +94,13 @@
                 <a href="#"><i class="fa-brands fa-square-twitter" style="color: #000000;"></i></a>
             </div>
 
-            <div class="footer__contactContainer">
-                <h3 class="footer__contactTitle">Kontakt formular</h3>
-                <form class="footer__form" action="./tak.html" novalidate>
-                    <div class="form__field">
-                        <label class="input__label">Navn:
-                            <input id="inputName" class="form__input" type="text" name="navn" placeholder="F.eks Brian"
-                                required>
-                        </label>
-                        <span class="form__message"></span>
-                    </div>
-                    <div class="form__field">
-                        <label class="input__label">Email:
-                            <input id="inputEmail" class="form__input" type="email" name="email"
-                                placeholder="F.eks osteelskeren@ost.dk" required>
-                        </label>
-                        <span class="form__message"></span>
-                    </div>
-                    <div class="form__field">
-                        <label class="input__label">Tlf:
-                            <input id="inputNumber" class="form__input" type="tel" name="tlf"
-                                placeholder="F.eks 10203040" required>
-                        </label>
-                        <span class="form__message"></span>
-
-                    </div>
-                    <div class="form__field">
-                        <label class="input__label">Besked:
-                            <textarea class="form__input" placeholder="F.eks. Jeg vil gerne bestille 2 kg ost"
-                                required></textarea>
-                        </label>
-                        <span class="form__message"></span>
-                    </div>
-                    <div class="form__submit">
-                        <button class="form__submitButton" type="submit">Send</button>
-                    </div>
-                </form>
-            </div>
-        </div>
+            <div class="copyright__container">
         <p class="footer__copyright">© Copyright Ole Hall - Forfatter og Erhvervsjournalist 2023.
             Website af Silje Paldrup</p>
+            </div>
     </footer>
+    <script src="./assets/script/contact.js" defer></script>
+    
 </body>
 
 </html>
