--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indie projekt</title>
-    <script src="https://kit.fontawesome.com/2946442f60.js" crossorigin="anonymous" defer></script> 
+    <script src="https://kit.fontawesome.com/2946442f60.js" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,20 +16,26 @@
             <a href="./index.html" class="siteheader__frontpageLink">
                 <img class="siteHeader__img" src="./assets/images/ole+headshot.jpg"
                     alt="Et billede af Ole Hall i sort og hvid">
-                <h1 class="siteHeader__title">Ole Hall</h1></a>
+                <h1 class="siteHeader__title">Ole Hall</h1>
+            </a>
             <h2 class="siteHeader__subtext">Forfatter & erhvervsjournalist</h2>
         </div>
         <nav class="primaryNav">
             <menu class="primaryNav__menu">
                 <div class="primaryNav__div">
-                    <li class="primaryNav__menuItem"><a href="./kasi-jesper.html" class="primaryNav__link">Kasi-Jespers kamp</a></li>
-                    <li class="primaryNav__menuItem"><a href="./bitcoin.html" class="primaryNav__link">Bitcoin-bedraget</a></li>
-                    <li class="primaryNav__menuItem"><a href="./elon-musk.html" class="primaryNav__link">Elon Musk</a></li>
+                    <li class="primaryNav__menuItem"><a href="./kasi-jesper.html" class="primaryNav__link">Kasi-Jespers
+                            kamp</a></li>
+                    <li class="primaryNav__menuItem"><a href="./bitcoin.html"
+                            class="primaryNav__link">Bitcoin-bedraget</a></li>
+                    <li class="primaryNav__menuItem"><a href="./elon-musk.html" class="primaryNav__link">Elon Musk</a>
+                    </li>
                 </div>
                 <div class="primaryNav__div">
-                    <li class="primaryNav__menuItem"><a href="./books.html" class="primaryNav__link-right">Bøger</a></li>
+                    <li class="primaryNav__menuItem"><a href="./books.html" class="primaryNav__link-right">Bøger</a>
+                    </li>
                     <li class="primaryNav__menuItem"><a href="./about.html" class="primaryNav__link-right">Om</a></li>
-                    <li class="primaryNav__menuItem"><a href="./contact.html" class="primaryNav__link-right">Kontakt</a></li>
+                    <li class="primaryNav__menuItem"><a href="./contact.html" class="primaryNav__link-right">Kontakt</a>
+                    </li>
                 </div>
             </menu>
         </nav>
@@ -51,12 +57,12 @@
 
             <div class="frontpage__slider">
                 <div class="carousel">
-                    <button class="carousel__button carousel__button--left is-hidden" >
+                    <button class="carousel__button carousel__button--left is-hidden">
                         <img src="./assets/images/left.svg" alt="">
                     </button>
                     <div class="carousel__track-container">
                         <ul class="carousel__track">
-                            <li class="carousel__slide current-slide" >
+                            <li class="carousel__slide current-slide">
                                 <img class="carousel__image" src="./assets/images/ole-slider1.jpeg" alt="">
                             </li>
                             <li class="carousel__slide">
@@ -73,8 +79,8 @@
                     <button class="carousel__button carousel__button--right">
                         <img src="./assets/images/right.svg" alt="">
                     </button>
-            
-            
+
+
                     <div class="carousel__nav">
                         <button class="carousel__indicator current-slide"></button>
                         <button class="carousel__indicator"></button>
@@ -87,41 +93,48 @@
         <div class="frontpage__cardsContainer">
             <div class="frontpage__cards">
                 <a href="./kasi-jesper.html"><img class="frontpage__cardsImg" src="./assets/images/nycrop-kasi.jpeg"
-                    alt="forsiden til bogen Kasi-Jespers kamp"></a>
+                        alt="forsiden til bogen Kasi-Jespers kamp"></a>
                 <h3 class="frontpage__cardsTitle">Kasi-Jespers kamp</h3>
                 <p class="frontpage__cardsType">bog</p>
-                <p class="frontpage__cardsText">Jesper "Kasi" Nielsen tog turen fra anonym tankpasser på Vestegnen til kulørt rigmand med pragtvillaer på Mallorca, privatjet og bodyguard. Men da pressen og skattemyndighederne begyndte at granske hans virksomheder, sluttede eventyret brat. </p>
+                <p class="frontpage__cardsText">Jesper "Kasi" Nielsen tog turen fra anonym tankpasser på Vestegnen til
+                    kulørt rigmand med pragtvillaer på Mallorca, privatjet og bodyguard. Men da pressen og
+                    skattemyndighederne begyndte at granske hans virksomheder, sluttede eventyret brat. </p>
                 <div class="frontpage__cardsButtonContainer">
-                <a href="./kasi-jesper.html"><button class="cards__button">
-                        <p class="cards__buttonText">Læs mere her</p>
-                    </button></a>
+                    <a href="./kasi-jesper.html"><button class="cards__button">
+                            <p class="cards__buttonText">Læs mere her</p>
+                        </button></a>
                 </div>
             </div>
             <div class="frontpage__cards">
                 <a href="./bitcoin.html"><img class="frontpage__cardsImg" src="./assets/images/bitcoin-full.jpeg"
-                    alt="billedegrafik af bitcoin bedraget"></a>
+                        alt="billedegrafik af bitcoin bedraget"></a>
                 <h3 class="frontpage__cardsTitle">Bitcoin-bedraget</h3>
                 <p class="frontpage__cardsType">podcast</p>
-                <p class="frontpage__cardsText">På bordet foran Nete ligger en lille optager tændt. Den opfanger lyden af Nete, der er ved at investere 75.000 kroner i bitcoins med hjælp fra investeringsrådgiveren, Phillip Graham. Hvad Nete ikke ved er, at Phillip Graham og firmaet Qteck er mistænkt for svindel.</p>
+                <p class="frontpage__cardsText">På bordet foran Nete ligger en lille optager tændt. Den opfanger lyden
+                    af Nete, der er ved at investere 75.000 kroner i bitcoins med hjælp fra investeringsrådgiveren,
+                    Phillip Graham. Hvad Nete ikke ved er, at Phillip Graham og firmaet Qteck er mistænkt for svindel.
+                </p>
                 <div class="frontpage__cardsButtonContainer">
-                <a href="./bitcoin.html"><button class="cards__button">
-                        <p class="cards__buttonText">Læs mere her</p>
-                    </button></a>
+                    <a href="./bitcoin.html"><button class="cards__button">
+                            <p class="cards__buttonText">Læs mere her</p>
+                        </button></a>
                 </div>
 
             </div>
             <div class="frontpage__cards">
                 <a href="./pandora.html"><img class="frontpage__cardsImg" src="./assets/images/pandora-cover.png"
-                    alt="forsiden til bogen Pandora"></a>
+                        alt="forsiden til bogen Pandora"></a>
                 <h3 class="frontpage__cardsTitle">Pandora </h3>
                 <!-- <span class="frontpage__cardsH3--pandora">- Danmarks største
                         væksteventyr</span>  SER MÆRKELIGT UD MED LANG TITEL-->
                 <p class="frontpage__cardsType">bog</p>
-                <p class="frontpage__cardsText">“Vi vil basalt set bygge en virksomhed op på 10 år, som det tog LEGO 100 år at bygge. Det er relativt ambitiøst”. Sådan sagde Pandoras topchef, Mikkel Vendelin Olesen, på et internt seminar for selskabets øverste ledelse i 2009. Selskabet er i dag 50 mia. kroner værd.</p>
+                <p class="frontpage__cardsText">“Vi vil basalt set bygge en virksomhed op på 10 år, som det tog LEGO 100
+                    år at bygge. Det er relativt ambitiøst”. Sådan sagde Pandoras topchef, Mikkel Vendelin Olesen, på et
+                    internt seminar for selskabets øverste ledelse i 2009. Selskabet er i dag 50 mia. kroner værd.</p>
                 <div class="frontpage__cardsButtonContainer">
-                <a href="./pandora.html"><button class="cards__button">
-                        <p class="cards__buttonText">Læs mere her</p>
-                    </button></a>
+                    <a href="./pandora.html"><button class="cards__button">
+                            <p class="cards__buttonText">Læs mere her</p>
+                        </button></a>
                 </div>
             </div>
         </div>
@@ -129,7 +142,7 @@
 
         <section class="frontpage__heroContainer">
             <a href="./about.html"><img class="hero__img" src="./assets/images/ole-hall-full.jpeg"
-                alt="Et billede af Ole Hall stående i DR byen"></a>
+                    alt="Et billede af Ole Hall stående i DR byen"></a>
             <div class="hero__textContainer">
                 <h3 class="frontpage__heroTitle">Om Ole Hall</h3>
                 <p class="hero__text">Ole Hall er en prisvindende dansk journalist, som er ansat i DR Nyheder, hvor han
@@ -163,7 +176,8 @@
                         <p class="hero__buttonText">Læs mere her</p>
                     </button></a>
             </div>
-           <a href="./ryanair.html"> <img class="hero__img" src="./assets/images/ryanair-cover.png" alt="cover af bogen omkring Ryanair"></a>
+            <a href="./ryanair.html"> <img class="hero__img" src="./assets/images/ryanair-cover.png"
+                    alt="cover af bogen omkring Ryanair"></a>
         </section>
     </main>
 
@@ -178,56 +192,23 @@
                 <li class="footer__links"><a href="./kasi-jesper.html">Kasi-Jespers Kamp</a></li>
                 <li class="footer__links"><a href="./bitcoin.html">Bitcoin-bedraget</a></li>
                 <li class="footer__links"><a href="./pandora.html">Pandora - Danmarks vildeste væksteventyr</a></li>
-                <li class="footer__links"><a href="./ryanair.html">Ryanair - Flyselskabet mange hader - men alligevel flyver med</a>
+                <li class="footer__links"><a href="./ryanair.html">Ryanair - Flyselskabet mange hader - men alligevel
+                        flyver med</a>
                 </li>
             </menu>
             <div class="footer__socials">
-                <a href="https://dk.linkedin.com/in/olehall"><i class="fa-brands fa-linkedin" style="color: #000000;"></i></a>
-                <a href="https://twitter.com/olehall?s=20"><i class="fa-brands fa-square-twitter" style="color: #000000;"></i></a>
+                <a href="https://dk.linkedin.com/in/olehall"><i class="fa-brands fa-linkedin"
+                        style="color: #000000;"></i></a>
+                <a href="https://twitter.com/olehall?s=20"><i class="fa-brands fa-square-twitter"
+                        style="color: #000000;"></i></a>
             </div>
-
-            <div class="footer__contactContainer">
-            <h3 class="footer__contactTitle">Kontakt formular</h3>
-            <form class="footer__form" action="./tak.html" novalidate>
-                <div class="form__field">
-                    <label class="input__label">Navn:
-                        <input id="inputName" class="form__input" type="text" name="navn" placeholder="F.eks Brian"
-                            required>
-                    </label>
-                    <span class="form__message"></span>
-                </div>
-                <div class="form__field">
-                    <label class="input__label">Email:
-                        <input id="inputEmail" class="form__input" type="email" name="email"
-                            placeholder="F.eks osteelskeren@ost.dk" required>
-                    </label>
-                    <span class="form__message"></span>
-                </div>
-                <div class="form__field">
-                    <label class="input__label">Tlf:
-                        <input id="inputNumber" class="form__input" type="tel" name="tlf" placeholder="F.eks 10203040"
-                            required>
-                    </label>
-                    <span class="form__message"></span>
-
-                </div>
-                <div class="form__field">
-                    <label class="input__label">Besked:
-                        <textarea class="form__input" placeholder="F.eks. Jeg vil gerne bestille 2 kg ost"
-                            required></textarea>
-                    </label>
-                    <span class="form__message"></span>
-                </div>
-                <div class="form__submit">
-                    <button class="form__submitButton" type="submit">Send</button>
-                </div>
-            </form>
-        </div>
-    </div>
-        <p class="footer__copyright">© Copyright Ole Hall - Forfatter og Erhvervsjournalist 2023.
-            Website af Silje Paldrup</p>
+            <div class="copyright__container">
+            <p class="footer__copyright">© Copyright Ole Hall - Forfatter og Erhvervsjournalist 2023.
+                Website af Silje Paldrup</p>
+            </div>
     </footer>
-<script src="./assets/script/slider.js" defer></script>
-<script src="./assets/script/contact.js" defer></script>
+    <script src="./assets/script/slider.js" defer></script>
+   
 </body>
+
 </html>
