--- a/thankyou.html
+++ b/thankyou.html
@@ -41,46 +41,17 @@
             </menu>
         </nav>
     </header>
-    <main>
+  
+        <main id="#">
+            <section class="section__thanks">
+                <h1> Mange tak</h1>
+                <p class="thanks__text">Hej <span class="thankyou__name"></span>.</p>
+                <p class="thanks__text">Din besked er blevet modtaget. Ole Hall kontakter dig hurtigts muligt.</p>
+                <p class="thanks__text">Hav en god dag.</p>
+            </section>
+        </main>
+    
 
-        <article class="about__article">
-            <div class="about__articleTextContainer">
-                <h2 class="about__title">Om Ole Hall</h2>
-                <p class="about__bodyText">
-                    Ole Hall er en prisvindende dansk journalist, som er ansat i DR Nyheder, hvor han dækker økonomi og
-                    erhvervsliv for P1 Morgen og P1 Orientering. Ole Hall bidrager også til TV Avisen, Radioavisen,
-                    Genstart, Tiden og dr.dk. Før han i 2015 kom til DR, har han været skrivende journalist på bl.a.
-                    Berlingske, Jyllands-Posten og Altinget.dk.</p>
-                <p class="about__bodyText">Ole Hall er vært på podcasten Bitcoin-bedraget, hvor han undersøger et
-                    internationalt netværk, der er mistænkt for bedrageri i milliardklassen. Som journalist har Ole Hall
-                    også afsløret ulovlige udledninger af kemikalier i Nordsøen foretaget af Mærsk Oil. Han har
-                    dokumenteret
-                    kønsdiskrimination mod tusindvis af gravide begået af de største virksomheder i forsikrings- og
-                    pensionsbranchen - hvilket har ført til bødestraf til 14 selskaber. Han har derudover afdækket ,
-                    hvordan
-                    Danmarks største modekoncern Bestseller ulovligt har anvendt giftige kemikalier i børnetøj og
-                    undladt at
-                    informere kunderne.</p>
-                <p class="about__bodyText"> Ole Hall har desuden udgivet erhvervsbøger på Gyldendals forlag og Peoples
-                    Press
-                    - bl.a. den kritiske erhvervsbiografi "Kasi-Jespers kamp" og "Pandora - Danmarks vildste
-                    væksteventyr".
-                </p>
-                <p class="about__bodyText"> For sit journalistiske arbejde har Ole Hall modtaget flere nomineringer og
-                    priser - bl.a. har han modtaget EU-Komissionens Europæiske journalistpris og Advokatrådets
-                    journalistpris, og han er blevet nomineret til årets bedste kritiske interview (Prix Audio) og årets
-                    bedst formidlede undersøgende historie for podcast-dokumentaren Bitcoin-bedraget (FUJ).</p>
-                    <div class="about__buttonContainer">
-                <a href="http://presse.gyldendal.dk/Forfattere.aspx?search=ole%20hall"><button
-                        class="about__button">Pressefotos</button></a>
-                <a href="./contact.html"><button class="about__button">Kontakt Ole</button></a>
-            </div>
-            </div>
-            <img class="about__img" src="./assets/images/ole-full-cover-quality.jpeg" alt="Et billede af Ole Hall">
-
-        </article>
-
-    </main>
 
     <footer>
         <img class="footer__svg" src="./assets/images/footer-wave.svg" alt="bølgende farve der går ned i footeren">
@@ -105,6 +76,7 @@
             Website af Silje Paldrup</p>
             </div>
     </footer>
+    <script src="./assets/script/thankyou.js" defer></script>
 </body>
 
 </html>
