Finish responsivness on rest of pages

--- a/books.html
+++ b/books.html
@@ -90,7 +90,7 @@
                     <a href="./elon-musk.html"><button class="books__buttons">Læs mere</button></a>
                 </div>
             </div>
-            <img src="https://placehold.co/200x220" alt="placeholder">
+            <img class="books__img" src="https://placehold.co/200x220" alt="placeholder">
         </section>
 
         <section class="books__kasijesperContainer">
@@ -102,7 +102,7 @@
                     <a href="./kasi-jesper.html"><button class="books__buttons">Læs mere</button></a>
                 </div>
             </div>
-            <img src="./assets/images/kasi-jesper-books-site.jpeg" alt="placeholder">
+            <img class="books__img" class="books__img" src="./assets/images/kasi-jesper-books-site.jpeg" alt="placeholder">
         </section>
 
         <section class="books__pandoraContainer">
@@ -114,7 +114,7 @@
                     <a href="./pandora.html"><button class="books__buttons">Læs mere</button></a>
                 </div>
             </div>
-            <img src="./assets/images/pandora-books-site.png" alt="placeholder">
+            <img class="books__img" src="./assets/images/pandora-books-site.png" alt="placeholder">
         </section>
 
         <section class="books__ryanairContainer">
@@ -126,7 +126,7 @@
                     <a href="./ryanair.html"><button class="books__buttons">Læs mere</button></a>
                 </div>
             </div>
-            <img src="./assets/images/ryanair-books-site.png" alt="placeholder">
+            <img class="books__img" src="./assets/images/ryanair-books-site.png" alt="placeholder">
         </section>
 
     </main>
