Make small edits

--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
             <div class="form__field">
                 <label class="input__label">E-mail:
                     <input id="inputEmail" class="form__input" type="email" name="email"
-                        placeholder="F.eks megetvigtigt@journalist.dk" required>
+                        placeholder="F.eks brian@journalist.dk" required>
                 </label>
                 <span class="form__message"></span>
             </div>
@@ -114,7 +114,7 @@
             <div class="form__field">
                 <label class="input__label">Besked:
                     <textarea class="form__input"
-                        placeholder="F.eks. Jeg vil gerne inviterer Ole på besøg hos dronningen" required></textarea>
+                        placeholder="F.eks. Er du ledig til interview den..." required></textarea>
                 </label>
                 <span class="form__message"></span>
             </div>
@@ -154,6 +154,7 @@
 
     <script src="./assets/script/burgermenu.js" defer></script>
     <script src="./assets/script/contact.js" defer></script>
+    <script src="./assets/script/thankyou.js" defer></script>
 
 </body>
 
