--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
         </section>
         <section class="frontpage__heroContainerLast">
-            <div class="hero__textContainer">
+            <div class="hero__textContainerLast">
                 <h3 class="frontpage__heroTitleLast">Ryanair
                     <span class="frontpage__heroTitleLast--size">- Flyselskabet mange hader - men alligevel flyver
                         med</span>
