overflow on mobile hidden

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <title>Indie projekt</title>
     <script src="https://kit.fontawesome.com/2946442f60.js" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="style.css">
@@ -154,7 +154,7 @@
 
     <script src="./assets/script/burgermenu.js" defer></script>
     <script src="./assets/script/contact.js" defer></script>
-    <script src="./assets/script/thankyou.js" defer></script>
+    
 
 </body>
 
